# echosense-challenge

./: README.md
esp32/: .env.example  Cargo.toml  README.md  build.rs  sdkconfig.defaults  shell.nix
esp32/.cargo/: config.toml
esp32/src/: assembly.rs  custom_error.rs  display.rs  file_server.rs  main.rs  microphone.rs  mini_sdcard.rs  network.rs  qrcode.rs  sendgrid.rs  stream_audio_writer.rs
esp32/src/images/: dev_to_logo.rs  done_icon.rs  mod.rs  wifi_icon.rs
frontend/: .env  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/@/components/ui/accordion/: AccordionContent.vue  AccordionItem.vue  AccordionTrigger.vue
frontend/@/components/ui/badge/: Badge.vue
frontend/@/components/ui/checkbox/: Checkbox.vue
frontend/@/components/ui/drawer/: DrawerOverlay.vue
frontend/@/components/ui/input/: Input.vue
frontend/@/components/ui/label/: Label.vue
frontend/@/components/ui/tabs/: TabsContent.vue  TabsList.vue  TabsTrigger.vue
frontend/@/components/ui/textarea/: Textarea.vue
frontend/public/: site.webmanifest
frontend/src/: App.vue  main.ts  simulator.ts  style.css  utilities.ts  vite-env.d.ts
frontend/src/assets/: index.css
frontend/src/components/: Device.vue  TranscriptionRow.vue
