[package]
name = "echosense-challenge"
version = "0.1.0"
authors = ["Rafael Milewski <rafael.milewski@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "echosense-challenge"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev = "9e7052662ef6944e30ee71986ae7f86eae78922a" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", rev = "97c01ef814d75f43d9155a9876ef440a7f5a3cc0" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", rev = "d21cd88c5d412367034bfb1eae299be2640af604" }
cmake = { git = "https://github.com/ivmarkov/cmake-rs" }

[features]
default = []

[dependencies]
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
anyhow = "1.0.93"
esp-idf-svc = { version = "0.49.1", features = ["critical-section", "embassy-time-driver", "embassy-sync", "alloc", "experimental"] }
image = { version = "0.25.5", features = ["bmp"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
riff-wave = "0.1.3"
log = "0.4.22"
crossbeam = "0.8.4"
button-driver = { version = "0.2.2", features = ["std", "embedded_hal"] }
tinybmp = "0.6.0"
display-interface = "0.5.0"
qrcode-generator = { version = "5.0.0" }

[build-dependencies]
embuild = "0.32.0"
dotenv-build = "0.1"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.3.0" }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "joltwallet/littlefs", version = "1.14" }
